--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,4 @@ lib_deps =
 	lowpowerlab/RFM69 @ ^1.5.2
 	SPI
 	wnatth3/WiFiManager@^2.0.16-rc.2
-	knolleary/PubSubClient@^2.8
-build_flags = 
-	#-DCONFIG_COMPILER_OPTIMIZATION_ASSERTIONS_ENABLE
-	#-DCORE_DEBUG_LEVEL=5
-
+	bertmelis/espMqttClient@^1.6.0
