--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = firebeetle32
 framework = arduino
+upload_speed = 921600
 monitor_speed = 115200
 monitor_port = /dev/ttyUSB0
 lib_deps = 
